# nwpu-robomaster-2017

./: ArmorDetectTest.cpp  ArmorDetector.cpp  ArmorDetector.h  CMakeLists.txt  ColorDetectTest.cpp  README.md  RMVideoCapture.cpp  SerialConfig.cfg  SerialInterface.cpp  SerialInterface.h  SerialNode.cpp  SerialNode.h  calibrated_photo.cpp  calibration.cpp  camera.yml  main.cpp  param_config.xml  robot_abstract.h  setting.xml  testPort.cpp  testTf.cpp  transform.cpp  transform.h  transport.h  transport_serial.cpp  transport_serial.h  wmj_link.cpp  wmj_link.h  writerCapture.cpp
